1.增加验证方法 2.增加https开启方式 3.增加redis
